--- a/style.css
+++ b/style.css
@@ -135,9 +135,8 @@ rect.chord-span[data-selected="true"] {
     position: sticky;
     bottom: 0;
     background: #fff;
-    border-radius: 0.5em 0.5em 0 0;
+    border-radius: 0.5em;
 	border: 1px solid #999;
-	border-bottom: none;
 	box-shadow: 0 0 0.2em #ccc;
 	padding: 0.5em;
 	margin: 1em;
